fixed broken layout when large comments in agore

--- a/imports/ui/css/earth.css
+++ b/imports/ui/css/earth.css
@@ -128,6 +128,7 @@ blockquote {
 
 .paper.paper-comment {
   position: relative;
+  width: 100%;
   margin-top: 0px;
   margin-bottom: -10px;
   padding-right: 5px;
